
4.3.3:

Bug Fixes: 
- Fixed bug with SQL (#309)
- Fixed bug with ally requests not being removed (#312)

4.3.4:
	
Bug Fixes: 
- Fixed bug causing offline players to cause the server to lag (#321)
- Fixed bug when there are no teams made (#318)

4.3.5: 

Bug Fixes: 
- Fixed bug where some messages would display with "true" before them

4.3.6: 

Bug Fixes: 
- Fixed internal error when viewing ally requests from teams that were disbanded (#326)
- Fixed bug with /teama reload (#328) 
- Fixed 404 links within the wiki (#324)

4.3.7: 

Features: 
- Added Spanish translations (es) - Credit Santos (discord)

Improvements:
- Added some missing Mexican Spanish translations - Credit Mayansito (discord)

Bug Fixes:
- Fixed /team disband bug - Credit Shorxy (discord) (#330)

4.4.0: 

Features: 
- Added Lithuanian translations (#335) - Credit Fragas (discord)

Bug Fixes: 
- Performance improvements on when closing inventory (#345) - Credit PhoenixZTT (discord)
- Fixed bug with invite message on polish translations (you will need to reset your pl.yml file for this to take effect) (#341)

4.4.1: 

Features:
- Updated to 1.19
- Added 4 new placeholders for online and offline member lists (#346)
- Added permission node `betterteams.chest.bypass` to bypass chest claims (#313)

Improvements: 
- /team warp <team> now shows all warps created by that team (#351)
- Added a title message when a player is kicked from the team (#210)
- Fixed potential issue with placeholders to throw errors 

Bug Fixes:
- Fixed bug where `enforceTag` does not work as expected (#350) (#348)
- Fixed bugs causing errors on empty YAML files

4.5.0: 

Features: 
- Added /teama money <set/add/remove> <balance> command (#365)

Bug Fixes: 
- Fixed bug where BetterTeams causes a server crash if the database connection times out (#360)
- Fixed bug where invalid storage files cause /team top and /team baltop to throw errors (#363)


Headings: 
Features: 


Improvements:


Bug Fixes: 
