@@ -1,0 +1,476 @@
+# All translations in this file are community made, this means there may be errors / missed translations, if you are able to improve upon any translation it would be greatly appreciated
+
+# Able to help with translations? Either improving a already existing language, or adding a whole new one. Join the discord server: https://discord.gg/JF9DNs3 
+# or message me on spigot: https://www.spigotmc.org/members/booksaw123.120955/
+
+# Any placeholders from placeholder API will work in this file
+
+invalidArg: '&4Pogresan Argument, pomoc'
+inTeam: '&4Morate biti u timu da bi ste to uradili'
+notInTeam: '&4Morate prvo napustiti vas tim kako bi ste to uradili'
+needOwner: '&4Morate biti vlasnik tima kako bi ste to uradili'
+needAdmin: '&4Morate biti admin ili vlasnik tima kako bi ste to uradili'
+needPlayer: '&4Morate biti igrac kako bi ste to uradili'
+noPlayer: '&4Specificni igrac nije pronadjen'
+notTeam: '&6&4Taj tim ne postoji pokusajte &b/team create <name>'
+needSameTeam: '&6Niste u istom timu kao ta osoba'
+noPerm: '&4Nemate dozvolu da uradite to'
+prefixSyntax: '&7[%s&7] &r%s'
+bannedChar: '&4Karakter koji pokusavate da koristite je zabranjen'
+noTeam: '&4Taj tim ne postoji'
+loading: '&6Ucitavanje'
+cooldown:
+  wait: '&4Morate sacekati jos %s sekundi pre pokretanja toga!'
+cost:
+  tooPoor: '&4Previse ste siromasni da bi ste koristili tu komandu'
+  run: '&4&l-%s'
+placeholder:
+  noTeam: ''
+  noDescription: ''
+  money: '%s'
+  owner: Vlasnik
+  admin: Admin
+  default: Default
+  name: '%s'
+  tag: '%s'
+  displayname: '%s'
+  inteam: 'true'
+  notinteam: 'false'
+  noTitle: ''
+prefix:
+  owner: ' **'
+  admin: ' *'
+  default: ' '
+create:
+  exists: '&6Taj tim vec postoji'
+  success: '&6Vas tim je kreiran'
+  banned: '&4Takvo ime tima je zabranjeno'
+  maxLength: '&4Ime tima je predugacko'
+leave:
+  success: '&6Napustili ste tim'
+  lastOwner: '&6Jedini ste vlasnik tima, Morate da promovisete nekoga
+    ili koristite &b/team disband &6da obrisete tim'
+rank:
+  noTeam: '&4Tim nije pronadjen'
+  info: '&6Pozicija tima:'
+  infos: '&6Team rank: &b%s &7(%s bodova potrebno za iduce usavrsavanje)'
+  infom: '&6Team rank: &b%s &7($%s potrebno za iduce promovisanje)'
+  infomm: '&6Team rank: &b%s &7(You je najveci rank)'
+  syntax: '&b%s: &6%s &7(%s)'
+delhome:
+  success: '&6Vasa tim kuca je obrisana'
+  noHome: '&4vas tim nema kucu'
+disband:
+  success: '&6Obrisali ste tim'
+  confirm: '&6Kucajte &b/team disband &6ponovo da potvrdite'
+description:
+  success: '&6Promenili ste opis tima'
+  view: '&6Team Description: %s'
+  noDesc: '&6Tim nema opis'
+  noPerm: '&4Nemate dozvolu da menjate opis'
+name:
+  success: '&6Promenili ste ime tima'
+  view: '&6Team name: %s'
+  exists: '&4Taj tim vec postoji'
+  noPerm: '&4Nemate dozvolu da menjate ime tima'
+invite:
+  success: '&6Taj igrac je pozvan'
+  invite: '&6pozvani ste da se pridruzite timu %s uradite &b/team join <team> &6 da se pridruzite
+    timu'
+  inTeam: '&6Taj igrac je vec u timu'
+  banned: '&6Taj igrac je zabranjen u vasem timu'
+  full: '&6Vas tim je put, izbacite nekoga kako bi ste pozvali jos ljudi'
+  expired: '&4Pozivnica &b%s je istekla'
+join:
+  success: '&6Pridruzili ste se tom timu'
+  notify: '&6Dobrodosao/la &b%s &6u tim!'
+  notInvited: '&6&4Niste pozvani u taj tim'
+  banned: '&6&4Zabranjen vam je ulaz u taj tim'
+  full: '&4Taj tim je pun'
+open:
+  successopen: '&6Vas tim je sada otvoren za svakoga'
+  successclose: '&6Ljude se sada mogu pridruziti vasem timu samo uz pozivnicu'
+title:
+  change: '&6Vas naslov je sada promenjen u &b%s'
+  remove: '&6Vas naslov je sklonjen'
+  success: '&6Vas naslov je promenjen'
+  tooLong: '&4Taj naslov je previse dugacak'
+  noFormat: '&4Nemate dozvolu da formatirate naslov'
+  noColor: '&4nemate dozvolu da bojite naslov'
+  reset: '&6Vas naslov je restartovan'
+  noPerm: '&4Nemate dozvolu da menjate naslov vaseg tima'
+info:
+  needTeam: '&6Nijedan igrac ili tim nije pronadjen pod tim imenom'
+  name: '&6Name: &b%s'
+  description: '&6Description: &b%s'
+  open: '&6Open: &b%s'
+  level: '&6Level: &b%s'
+  owner: '&6Owners: &b%s'
+  admin: '&6Admins: &b%s'
+  default: '&6Members: &b%s'
+  tag: '&6Tag: &b%s'
+  fail: '&6Nijedan igrac ili tim nije pronadjen pod tim imenom'
+  score: '&6Score: &b%s'
+  money: '&6Balance: &b%s'
+  ally: '&6Allies: &b%s'
+kick:
+  success: '&6Taj igrac je izbacen'
+  notify: '&6Izbaceni ste iz tima %s'
+  title: '&4Izbaceni ste iz vaseg tima'
+  noPerm: '&6Nemate dozvolu da izbacite tu osobu'
+ban:
+  success: '&6Taj igrac je zabranjen'
+  notify: '&6Zabranjen vam je ulaz u tim %s'
+  title: '&4Zabranjen vam je ulaz u vas tim'
+  noPerm: '&6Nemate dozvolu da izbacite tu osobu'
+  already: '&6Tom igracu je vec zabranjen ulazak'
+unban:
+  success: '&6Taj igrac ponovo moze da udje u tim'
+  notify: '&6Ponovo mozete da udjete u tim %s'
+  noPerm: '&6Nemate dozvolu da dozvolite ulazak tom igracu'
+  not: '&6Taj igrac vec moze da udje u tim'
+promote:
+  success: '&6Taj igrac je promovisan'
+  noPerm: '&6Nemate dozvolu da promovisete tog igraca'
+  max: '&6Taj igrac je vec ima maksimalan cin!'
+  notify: '&6Promovisani ste!'
+  maxAdmins: '&4Vas tim ima maksimalan broj administratora, oduzmite cin nekome
+    ili povecajte nivo vaseg tima'
+  maxOwners: '&4Vas tim vec ima maksimalan broj vlasnika, oduzmite cin nekome
+    ili povecajte nivo vaseg tima'
+demote:
+  success: '&6Tom igracu je vec oduzet cin'
+  noPerm: '&6Nemate dozvolu da oduzmete cin tom igracu'
+  min: '&6Taj igrac vec ima najmanji cim'
+  notify: '&6Oduzet vam je cin'
+  lastOwner: '&6Ne mozete oduzeti cin glavnom vlasniku'
+  maxAdmins: '&4Vas tim ima maksimalan broj administratora, oduzmite cin nekome
+    ili povecajte nivo vaseg tima'
+home:
+  success: '&6Teleportovani ste'
+  noHome: '&6Vas tim nema kucu'
+  world: '&4Kuca vaseg tima ne moze biti nadjena'
+sethome:
+  success: '&6Kuca vaseg tima je postavljena'
+  noPerm: '&6Niste dovoljno velik cin kako bi ste postavili kucu tima'
+chat:
+  enabled: '&6Vase poruke sada odlaze u tim dopisivanje'
+  disabled: '&6Vase poruke sada odlaze u glavno dopisivanje'
+  syntax: '&b[Team]&f%s&f: %s'
+color:
+  success: '&6Boja vaseg tima je promenjena'
+  fail: '&6To nije prepoznatljiva boja'
+  banned: '&4Mozete samo koristiti boje, ne kodove za formatiranje'
+deposit:
+  tooLittle: '&4ne mozete ubaciti negativnu kolicinu'
+  fail: '&4Depozit nije uspeo'
+  success: '&6Novac je prenet'
+  max: '&4To bi premasilo maksimalan tim balans'
+withdraw:
+  tooLittle: '&4Ne mozete podici negativnu kolicinu'
+  fail: '&4Podizanje nije uspelo'
+  success: '&6Novac je podignut'
+  notEnough: '&6Vas tim nema dovoljno novca'
+ally:
+  already: '&4Vec ste saradnici'
+  success: '&6Vasi timovi nisu saradnici'
+  ally: '&6Vas tim nije saradnik &b%s'
+  requested: '&6Zahtev za saradnju je poslat tom timu'
+  request: '&b%s &6je poslao zahtev za saradnju, koristite &b/team ally <team> &6da prihvatite zahtev'
+  self: '&4Ne mozete saradjivati sa sopstvenim timom'
+  from: '&6You have ally requests from: %s'
+  noRequests: '&4Nemate nikakvih zahteva za saradnju'
+  onJoin: '&6Imate novi zahtev za saranju uradite &b/team ally &6da ih vidite'
+  limit: '&4Ogranicenje saradnika je dostignuto'
+  alreadyrequest: '&4Vec ste poslali zahtev za saranju tom timu'
+allychat:
+  disabled: '&6Vase poruke vise ne odlaze u dopisivanje saveznika'
+  enabled: '&6Vase poruke sada odlaze u dopisivanje saveznika'
+  syntax: '&d[%s]&f%s&f: %s'
+neutral:
+  self: '&6Taj tim je vas tim'
+  requestremove: '&6Taj zahtev za saradnju je prekinut'
+  reject: '&4Vas zahtev za saradnju sa &b%s &4je odbijen'
+  notAlly: '&4Niste u saradnji sa tim timom'
+  success: '&4Vise niste saveznici sa tim timom'
+  remove: '&4Vise niste saveznici sa &b%s'
+list:
+  noPage: '&6Ta strana nije pronadjena'
+  header: '&7--- &bTim lista strana %s &7---'
+  body: '&6%s: &b%s'
+  footer: '&7--- &6uradite &b/team list [page] &6da vidite vise &7---'
+setowner:
+  use: '&6Ne mozete promovisati tog igraca, koristite &b/team setowner <player> &6da promovisete
+    tog igraca u vlasnika'
+  success: '&6Taj igrac je sada vlasnik'
+  notify: '&6Sada ste vlasnik vaseg tima'
+  max: '&4Taj igrac je vec vlasnik'
+setwarp:
+  exist: '&4Taj warp vec postoji'
+  max: '&4Vas tim vec ima maksimalan broj warpova'
+  success: '&6Warp je napravljen'
+  char: '&4To ime warpa sadrzi zabranjene karaktere'
+warp:
+  nowarp: '&4Taj warp ne postoji'
+  invalidPassword: '&4Pogresna sifra za taj warp'
+  success: '&6Teleportovani ste'
+  world: '&4Lokacija tog warpa nije pronadjena'
+warps:
+  syntax: '&6Warps: &b%s'
+  none: '&4Vas tim nema postavljene warpove'
+delwarp:
+  success: '&4Warp je obrisan'
+teleport:
+  fail: '&4Teleportacija nije uspela'
+  wait: '&6Sacekajte &b%s &6sekundi'
+chest:
+  claim:
+    noChest: '&4Ne stojite na kovcegu'
+    limit: '&4Vas tim je zauzeo maksimalan broj kovcega'
+    claimed: '&4Taj kovceg je vec pripojen'
+    success: '&6Pripojili ste taj kovceg'
+  remove:
+    noChest: '&4Ne stojite na kovcegu'
+    notClaimed: '&4Vas tim nije pripojio taj kovceg'
+    success: '&4Vas tim vise ne prisvojava taj kovceg'
+  all:
+    success: '&6Vise ne posedujete ni jedan kovceg'
+  claimed: '&4Taj kovceg je u posedu &a%s'
+echest:
+  
+  echest: Enderchest
+pvp:
+  
+  enabled: '&6PvP je ukljucen za vas tim'
+  disabled: '&6PvP je iskljucen za vas tim'
+rankup:
+  
+  max: '&4Vec imate maksimalan cin'
+  score: '&4Treba vam %s poena da bi bili promovisani'
+  money: '&4Treba vam %s novca u banci tima kako bi se promovisali'
+  success: '&6Vas tim se promovisao!'
+tag:
+  
+  banned: '&4Ta oznaka je zabranjena'
+  success: '&6Vasa oznaka je uspesno promenjena'
+  maxLength: '&4Ta oznaka je predugacka'
+  noPerm: '&4Nemate dozvolu da menjate oznaku tima'
+admin:
+  cancel: '&4Komanda je prekinuta zbog drugog dodatka (plugina)'
+  tag:
+    success: '&6Ta tim oznaka je uspesno promenjena'
+  setrank:
+    success: '&6Taj cin tima je postavljen'
+    'no': '&4Taj cin tima ne postoji ili nije postavljen pravilno'
+  config:
+    
+    reload: '&6BetterTeams je ponovo ucitan (ukoliko imate nekih problema pri koriscenju
+      komandi, restartujte server)'
+  holo:
+    create:
+      success: '&6Hologram je napravljen'
+    remove:
+      noHolo: '&4Hologram nije pronadjen'
+      success: '&6Hologram je obrisan'
+  title:
+    success: '&6Naslov tog igraca je promenjen'
+    reset: '&6Naslov tog igraca je restartovan'
+  version: '&6Current plugin version: &b%s'
+  versionstorage: '&6Storage Method: &b%s'
+  versionversion: '&6Minecraft Version: &b%s'
+  noTeam: '&4To nije tim'
+  home:
+    success: '&6Teleportovani ste do kuce tog tima'
+    noHome: '&4Taj tim nema postavljenu'
+  name:
+    success: '&6Ime tima je promenjeno'
+  description:
+    success: '&6Ime tog tima je promenjeno'
+  open:
+    successopen: '&6Taj tim jue sada otvoren za sve'
+    successclose: '&6U taj tim se sada moze uci samo uz pozivnicu'
+  invite:
+    success: '&6Taj igrac je sada pozvan u taj tim'
+  create:
+    success: '&6Taj tim je sada napravljen'
+  join:
+    banned: '&4Tom igracu je sada zabranjen ulaz u taj tim'
+    success: '&6Taj igrac se pridruzio timu'
+    notify: '&6Pridruzili ste se timu &b%s'
+    full: '&4Taj tim je pun'
+  notInTeam: '&6Taj igrac ne moze biti u timu pre toga'
+  inTeam: '&4Taj igrac nije u timu'
+  leave:
+    success: '&6Taj igrac je napustio tim'
+    notify: '&6Napustili ste taj tim'
+  demote:
+    notify: '&6Oduzet vam je cin'
+    success: '&6Tom igracu je oduzet cin'
+    min: '&4Tom igracu se vise ne moze oduzeti cin'
+    maxAdmins: '&4Taj tim vec ima maksimalan broj administratora, sklonite jednog pre
+      oduzimanja cina tom igracu'
+  promote:
+    max: '&6Taj igrac vec ima maksimalan cin'
+    notify: '&6Promovisani ste'
+    success: '&6Taj igrac je uspesno promovisan'
+    owner: '&6Namesteno je da tim moze imati samo jednog vlasnika, uradite &b/teama
+      setowner <player> &6da bi postavili igraca kao vlasnika'
+    maxAdmins: '&4Taj tim vec ima maksimalan broj administratora, sklonite jednog pre
+      promovisanja tog igraca'
+    maxOwners: '&4Taj tim vec ima maksimalan broj vlasnika, sklonite jednog pre
+      promovisanja tog igraca'
+  setowner:
+    already: '&4Taj igrac je vec vlasnik'
+    nonotify: '&6Vise niste vlasnik tima'
+    success: '&6Taj igrac je novi vlasnik tima'
+    notify: '&6Sada ste vlasnik svog tima'
+  warps:
+    none: '&4Taj tim nije postavio ni jedan warp'
+  setwarp:
+    success: '&6Taj warp je sada postavljen'
+    max: '&6Taj tim je vec postavio maksimalan broj warpova'
+  purge:
+    confirm: '&6Pokrenite tu komandu u narednih 10 sekundi, &4OVO NE MOZE
+     BITI PREKINUTO I OBRISACE SVE POENE TIMOVA'
+    success: '&6Timovi su ocisceni'
+  score:
+    tooSmall: '&4Poeni moraju biti veci od 0'
+    success: '&6Poeni tog tima su uspesno promenjeni'
+  update: '&4Tu je nova verzija BetterTeams i mozete je preuzeti ovde: (https://www.spigotmc.org/resources/better-teams.17129/)'
+  disband:
+    success: '&6Taj tim je obrisan uspesno'
+  color:
+    success: '&6Boja tog tima je promenjena'
+  chest:
+    claim:
+      success: '&6Zauzeli ste taj kovceg u ime tima'
+    remove:
+      success: '&6Uspesno ste sklonili posedovanje sa tog kovcega'
+      notClaimed: '&4Nijedan tim nije zauzeo taj kovceg'
+    all:
+      success: '&6Sva zauzimanja su sklonjena iz tog tima'
+    disable:
+      already: '&4Zauzimanje kovcega je vec ugaseno'
+      success: '&6Zauzimanje kovcega je ugaseno'
+    disabled:
+      bc: '&6&lSvi zauzeti kovcezi se sada mogu otvoriti'
+    enable:
+      already: '&4Zauzimanje kovcega je vec dozvoljeno'
+      success: '&6Zauzimanje kovcega je sada dozvoljeno'
+    enabled:
+      bc: '&6&lSvi zauzeti kovcezi su sada zakljucani'
+  teleport:
+    success: '&6Svi aktivni igraci tog tima su teleportovani'
+nametag:
+  
+  syntax: '&6&l%s&r '
+holo:
+  leaderboard: '&6Leaderboard'
+  syntax: '&6%s: &b%s'
+  msyntax: '&6%s: &b$%s'
+top:
+  leaderboard: '&6Leaderboard'
+  syntax: '&b%s: &6%s &7(%s)'
+  divide: '&f...'
+baltop:
+  leaderboard: '&6Leaderboard'
+  syntax: '&b%s: &6%s &7(%s)'
+  divide: '&f...'
+spy:
+  stop: '&6Vise ne spijunirate poruke tog tima'
+  start: '&6Poceli ste da spijunirate poruke tog tima'
+  team: '&7[&b%s&7]&f%s&f: %s'
+  ally: '&7[&d%s&7]&f%s&f: %s'
+uclaim:
+  
+  team: '&4You must be in a team to create a claim'
+  member: '&4You cannot leave your teams claim'
+  kick: '&4You cannot kick members of your own team from your claim'
+  ban: '&4You cannot ban members of your own team from your claim'
+  dissolve: '&4Your team has been disbanded so your claim has been dissolved'
+help:
+  
+  description: Pogledajte i promenite opis vaseg tima
+  ban: Zabranite ulaz u tim specificnom igracu
+  home: teleportujte se do kuce vaseg tima
+  help: Pogledajte ovu help stranicu
+  promote: Promovisite specificnog igraca iz vaseg tima
+  demote: Oduzmite cin odredjenom igracu iz vaseg tima
+  unban: Ponovo dozvolite ulaz u tim odredjenom igracu
+  kick: Izbacite igraca iz vaseg tima
+  leave: Napustite tim u kojem se trenutno nalazite
+  chat: Posaljite poruku samo vasem timu
+  name: Pogledajte i promenite ime vaseg ima
+  sethome: Postavite kucu vaseg tima
+  create: Napravite tim sa odredjenim imenom
+  invite: Pozovite odredjenog igraca u vas tim
+  disband: Obrisite vas trenutni tim
+  open: Ukljucite da vas tim bude moguce uci samo uz pozivnicu
+  info: Pogledajte informacije o odredjenom timu ili igracu
+  color: Promenite boju tima
+  deposit: Posaljite novac u sef tima
+  bal: Pogledajte sef vaseg tima
+  withdraw: Podignite novac iz sefa vaseg tima
+  title: Promenite naslov igraca iz tima
+  top: Pogledajte najvece timove
+  rank: Pogledajte cin tima
+  join: pridruzite se odredjenom timu
+  delhome: Obrisite kucu tima
+  ally: Posaljite zahtev za saradnju drugom timu
+  neutral: Sklonite saveznike i odbite sve zahteve za saveznistvo
+  allychat: Posaljite poruku samo vasim saveznicima
+command:
+  
+  create: create
+  leave: leave
+  disband: disband
+  description: description
+  invite: invite
+  join: join
+  name: name
+  open: open
+  info: info
+  kick: kick
+  promote: promote
+  demote: demote
+  home: home
+  sethome: sethome
+  ban: ban
+  unban: unban
+  chat: chat
+  color: color
+  title: title
+  top: top
+  baltop: baltop
+  rank: rank
+  delhome: delhome
+  ally: ally
+  neutral: neutral
+  allychat: allychat
+  list: list
+  warp: warp
+  setwarp: setwarp
+  delwarp: delwarp
+  warps: warps
+  echest: echest
+  rankup: rankup
+  tag: tag
+  pvp: pvp
+  claim: claim
+  remove: remove
+  removeall: removeall
+  chest: chest
+  reload: reload
+  chatspy: chatspy
+  version: version
+  purge: purge
+  setrank: setrank
+  add: add
+  set: set
+  score: score
+  enableclaims: enableclaims
+  disableclaims: disableclaims
+  teleport: teleport
+  deposit: deposit
+  bal: bal
+  withdraw: withdraw
